<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">First Aid</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_phone">PhoneCall</string>
    <string name="action_search">Search</string>
    <string name="action_home">Home Page</string>
    <string name="popup_poison1">Food Poisoning</string>
	<string name="popup_poison2">Overdose</string>
	<string name="popup_poison3">Toxic Liquid</string>
	<string name="popup_burn1">Boiling Water</string>
	<string name="popup_burn2">Sunburn</string>
	<string name="popup_burn3">Heat Stroke</string>
	<string name="popup_fracture1">Sprain</string>
	<string name="popup_fracture2">Muscle Cramp</string>
	<string name="popup_fracture3">Fractured Bones</string>
	<string name="popup_heart1">Heart Attack</string>
	<string name="popup_heart2">Hypertension</string>
	<string name="popup_heart3">Asthma</string>
	<string name="emergency_number">Emergency Number</string>
	<string name="btn_call">Call Now</string>
	<string name="btn_cancel">Cancel</string>
	<string name="btn_send">Send Comment</string>
	
</resources>
