<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.firstaid.MainActivity" >
	
    
    <item
        android:id="@+id/action_phonecall"
        android:orderInCategory="100"
        android:icon="@drawable/phoneicon"
        android:title="@string/action_phone"
        app:showAsAction="always"/>
   
    
    <item
        android:id="@+id/action_search"
        android:orderInCategory="200"
        android:icon="@drawable/search1"
        android:title="@string/action_search"
        app:showAsAction="always" />
    
       <item
        android:id="@+id/action_home"
        android:orderInCategory="300"
        android:icon="@drawable/home"
        android:title="@string/action_home"
        app:showAsAction="always" />
    	
</menu>
