<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_element"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/popup_window"
    android:padding="20sp" >

    <TextView
        android:id="@+id/txtEmergency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp"
        android:text="@string/emergency_number"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:paddingBottom="20dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:paddingTop="20dp" >

        <Button
            android:id="@+id/btnCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="btnCall"
            android:text="@string/btn_call"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="20dip" />

        <Button
            android:id="@+id/btnCallCancel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dip"
            android:onClick="btnCallCancel"
            android:text="@string/btn_cancel"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</LinearLayout>
